# asupersync_ansi_c

./: .agent-mail.yaml  .gitignore  .schema-baseline-hash  AGENTS.md  CMakeLists.txt  Makefile  PLAN_TO_PORT_ASUPERSYNC_TO_ANSI_C.md  README.md  cursor.mcp.json  gemini.mcp.json
.beads/: issues.jsonl
docs/: AUTOMOTIVE_PROFILE.md  CHANNEL_TIMER_DETERMINISM.md  CHANNEL_TIMER_KERNEL_SEMANTICS.md  CHANNEL_TIMER_SEMANTICS.md  CORE_SEMANTIC_FIXTURE_FAMILIES.md  CORE_TYPE_IMPLEMENTATION_MANIFEST.md  C_PORTABILITY_RULES.md  DEFERRED_SURFACE_REGISTER.md  DEPLOYMENT_HARDENING.md  EMBEDDED_TARGET_PROFILES.md  EXISTING_ASUPERSYNC_STRUCTURE.md  FEATURE_PARITY.md  FORBIDDEN_BEHAVIOR_CATALOG.md  GUARANTEE_SUBSTITUTION_MATRIX.md  HFT_PROFILE.md  INVARIANT_SCHEMA.md  OPENWRT_PACKAGING.md  OWNER_DECISION_LOG.md  PHASE2_SCAFFOLD_MANIFEST.md  PLAN_EXECUTION_TRACEABILITY_INDEX.md  PROPOSED_ANSI_C_ARCHITECTURE.md  RISK_CONTROLS_PERFORMANCE.md  RISK_CONTROLS_PORTABILITY.md  RISK_CONTROLS_SEMANTIC_FIDELITY.md  RISK_REGISTER.md  ROBUSTNESS_FIXTURE_FAMILIES.md  RUNTIME_KERNEL_IMPLEMENTATION_MANIFEST.md  RUST_BASELINE_PROVENANCE.md  RUST_FIXTURE_CAPTURE_TOOLING.md  SAFETY_PROFILES.md  SCENARIO_DSL.md  SELECTIVE_SURFACE_PORTING_QUEUE.md  SOURCE_TO_FIXTURE_PROVENANCE_MAP.md  TEST_COMPLETENESS_MATRIX.md  VERTICAL_CONTINUITY_FIXTURE_FAMILIES.md  WAVE_GATING_PROTOCOL.md  rust_baseline_inventory.json
fixtures/deployment_hardening/: automotive_fault_burst.json  market_open_burst.json  router_storm.json
fixtures/rust_reference/smoke/: profile_automotive.codec_bin.json  profile_automotive.codec_json.json  profile_core.codec_bin.json  profile_core.codec_json.json  profile_embedded_router.codec_bin.json  profile_embedded_router.codec_json.json  profile_freestanding.codec_bin.json  profile_freestanding.codec_json.json  profile_hft.codec_bin.json  profile_hft.codec_json.json
include/asx/: asx.h  asx_config.h  asx_export.h  asx_ids.h  asx_status.h
include/asx/codec/: codec.h  schema.h
include/asx/core/: budget.h  cancel.h  cleanup.h  outcome.h  transition.h
include/asx/runtime/: adapter.h  automotive_instrument.h  hft_instrument.h  overload_catalog.h  parallel.h  profile_compat.h  runtime.h  vertical_adapter.h
packaging/openwrt/asx/: Makefile
packaging/openwrt/asx/files/: asx.init
schemas/: canonical_fixture.schema.json  core_fixture_family_manifest.schema.json  fixture_capture_manifest.schema.json  invariant_schema.json  robustness_fixture_family_manifest.schema.json  vertical_continuity_fixture_family_manifest.schema.json
src/channel/: mpsc.c
src/core/: budget.c  cleanup.c  status.c
src/runtime/: adapter.c  automotive_instrument.c  cancellation.c  hft_instrument.c  hooks.c  lifecycle.c  overload_catalog.c  parallel.c  profile_compat.c  quiescence.c  runtime_internal.h  scheduler.c  trace.c  vertical_adapter.c
tests/: TEST.md  test_harness.h
tests/bench/: bench_runtime.c
tests/conformance/: codec_json_baseline_test.c
tests/e2e/: automotive_fault_burst.sh  e2e_automotive_fault_burst.c  e2e_market_open_burst.c  e2e_router_storm.c  harness.sh  market_open_burst.sh  openwrt_package.sh  router_storm.sh  run_all.sh  test_harness_smoke.sh
tests/invariant/lifecycle/: skeleton_test.c  test_lifecycle_legality.c
tests/unit/channel/: test_channel_exhaustion.c  test_mpsc.c
tests/unit/core/: handle_safety_test.c  status_basic_test.c  test_affinity.c  test_checkpoint_lint.sh  test_cleanup.c  test_error_ledger.c  test_fault_injection.c  test_ghost.c  test_ghost_borrow.c  test_handle_generation.c  test_obligation.c  test_resource.c  test_safety_profiles.c
tests/unit/runtime/: test_adapter.c  test_automotive_instrument.c  test_boundary_exhaustion.c  test_codec_equivalence.c  test_codec_json.c  test_coroutine.c  test_ghost.c  test_hft_instrument.c  test_overload_catalog.c  test_parallel.c  test_profile_compat.c  test_scheduler.c  test_stress.c  test_trace.c  test_vertical_adapter.c
tools/ci/: check_checkpoint_coverage.sh  check_endian_assumptions.sh  run_codec_equivalence.sh  run_compiler_matrix.sh  run_conformance.sh  run_embedded_matrix.sh  run_profile_parity.sh  run_qemu_smoke.sh
